# ultraView

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_release.sh  clean.sh  config_cmake.sh  copy_data.sh
.github/workflows/: build_linux.yaml  build_macos.yaml  build_windows.yaml
Data/CRTEmulation/Overlays/!src/: rgb-LUTs.psd
Data/CRTEmulation/Overlays/C1084S Bedroom/: profile.yml
Data/CRTEmulation/Overlays/C1702 Bedroom/: profile.yml
Data/CRTEmulation/Overlays/C1702 Office/: profile.yml
Data/CRTEmulation/Overlays/Exodus old TV/: profile.yml
Data/CRTEmulation/Shaders/: 2d-texture.glsl  common.glsl  crt-bezel-reflections.glsl  crt-curved.glsl  crt-simulation.glsl  decoder-ntsc.glsl  decoder-pal.glsl  decoder-yiq.glsl  decoder-yuv.glsl  encoder-ntsc.glsl  encoder-pal.glsl  encoder-yiq.glsl  encoder-yuv.glsl  lights.glsl  overlay-dust-layer.glsl  overlay-dust-particle.glsl  overlay-dust-particle.vert  overlay.glsl  raw-overscan.glsl
Data/CRTEmulation/Shaders/includes/: colorGrade.glsl  colorSpaces.glsl  common.glsl  getMipMapColor.glsl  grain.glsl  jailbars.glsl  mathDefines.glsl  overscan.glsl
Data/Data/: Cartridges.csv  Games.csv
Data/Themes/: default.ini
Data/UI/: about.md  about.txt  icons.yml
Data/UI/layouts/: constants.json
Data/UI/layouts/components/: crt-slider-icon.json  crt-slider-label.json  settings-location.json  settings-number.json  settings-toggle.json
Data/UI/layouts/pages/: crt.json  settings.json
Data/UI/layouts/screens/: about.json
Data/UI/strings/: en.yml
Installer/win/: ultraView.iss
Source/: Main.cpp
Source/Globals/: Icons.cpp  Icons.h  Preferences.h  Settings.h  Strings.cpp  Strings.h  Theme.h  constants.cpp  constants.h  iniFile.h  yamlFile.h
Source/Helpers/: Main_MacHelper.mm  Main_WinHelper.cpp
Source/Network/: AsyncNetwork.cpp  AsyncNetwork.h  C64u_Scanner.cpp  C64u_Scanner.h  C64u_UDP_Receiver.cpp  C64u_UDP_Receiver.h  NetworkHardwareChecker.cpp  NetworkHardwareChecker.h
Source/UI/: GUI_About.cpp  GUI_About.h  GUI_Main.cpp  GUI_Main.h  GUI_TooltipWindow.h  GUI_ultraSID.cpp  GUI_ultraSID.h  GUI_ultraSID_action_message.cpp  GUI_ultraSID_audio.cpp  GUI_ultraSID_drag_and_drop.cpp  GUI_ultraSID_file_changed.cpp  GUI_ultraSID_key_shortcuts.cpp  GUI_ultraView.cpp  GUI_ultraView.h  GUI_ultraView_action_message.cpp  GUI_ultraView_audio.cpp  GUI_ultraView_c64_remote.cpp  GUI_ultraView_drag_and_drop.cpp  GUI_ultraView_file_changed.cpp  GUI_ultraView_key_shortcuts.cpp  GUI_ultraView_networking.cpp  SID_LookAndFeel.cpp  SID_LookAndFeel.h
Source/UI/Badge/: GUI_Stripes.cpp  GUI_Stripes.h  GUI_ultraView_badge.cpp  GUI_ultraView_badge.h  GUI_ultraView_logo.cpp  GUI_ultraView_logo.h
Source/UI/CRT/: C64u_UDP_Receiver.cpp  C64u_UDP_Receiver.h  GUI_Browser.cpp  GUI_Browser.h  GUI_CRT.cpp  GUI_CRT.h  GUI_ListBox.cpp  GUI_ListBox.h  GUI_Overlay.cpp  GUI_Overlay.h
Source/UI/Components/: BarelyML.cpp  BarelyML.h  GUI_AudioDeviceSelector.cpp  GUI_AudioDeviceSelector.h  GUI_CRTSliderIcon.cpp  GUI_CRTSliderIcon.h  GUI_CRTSliderLabel.cpp  GUI_CRTSliderLabel.h  GUI_ComboBox.h  GUI_DesktopDropshadow.cpp  GUI_DesktopDropshadow.h  GUI_Disabler.cpp  GUI_Disabler.h  GUI_IconButton.cpp  GUI_IconButton.h  GUI_Label.h  GUI_Line.h  GUI_ListBox.cpp  GUI_ListBox.h  GUI_SVG_Button.cpp  GUI_SVG_Button.h  GUI_ScrollTextViewer.cpp  GUI_ScrollTextViewer.h  GUI_SearchBar.cpp  GUI_SearchBar.h  GUI_SettingsBox.cpp  GUI_SettingsBox.h  GUI_SettingsNumberEdit.cpp  GUI_SettingsNumberEdit.h  GUI_SettingsToggle.cpp  GUI_SettingsToggle.h  GUI_Slider.h  GUI_TextEditorEx.cpp  GUI_TextEditorEx.h  GUI_Toggle.cpp  GUI_Toggle.h  GUI_VIC2_Palette.cpp  GUI_VIC2_Palette.h  GUI_XYPad.cpp  GUI_XYPad.h
Source/UI/Misc/: ComponentFactory.cpp  ComponentFactory.h  FX_Helpers.h  GUI_ListboxMouseMoveHover.h  GUI_RoundedClip.h  MipMap.cpp  MipMap.h  VIC2_Render.cpp  VIC2_Render.h  colodore.cpp  colodore.h
ci/: build.sh
ci/toolchains/: base.json  clang.json  gcc.json  vs.json  xcode.json
